Set theme jekyll-theme-merlot

--- a/_config.yml
+++ b/_config.yml
@@ -70,3 +70,5 @@ plugins:
 
 # Exclude list
 exclude: [README.md, Gemfile, Gemfile.lock, _site, src, vendor, CNAME, LICENSE, Rakefile,.sass-cache,.DS_Store,.idea]
+
+theme: jekyll-theme-merlot
